Dispatch point and user proofile imporvements